<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_main"
    android:background="@drawable/gradient_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="344dp"
        android:layout_height="319dp"
        android:background="@drawable/panel"
        android:elevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911">

        <TextView
            android:id="@+id/textView_data_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:text="0 дней"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/users_data"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055" />

        <TextView
            android:id="@+id/textView_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/users_data_end"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.135"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_start" />

        <TextView
            android:id="@+id/textView_data_end"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:hint="__.__.____"
            android:text="__.__.____"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.689"
            app:layout_constraintStart_toEndOf="@+id/textView_end"
            app:layout_constraintTop_toTopOf="@+id/textView_end"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView_data_start"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:hint="__.__.____"
            android:text="__.__.____"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.649"
            app:layout_constraintStart_toEndOf="@+id/textView_start"
            app:layout_constraintTop_toTopOf="@+id/textView_start"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto"
            android:text="@string/users_data_start"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/textView_remaining_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_data_result"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView_remaining_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/remaining_time"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_data_result"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView_now_to_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:text="0 дней"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/textView_remaining_time"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/textView_remaining_time"
            app:layout_constraintTop_toBottomOf="@+id/textView_remaining_time" />

        <ImageButton
            android:id="@+id/notify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:onClick="onClickNotify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_notifications_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/conrol_panel"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/ic_nastroyki"
            android:contentDescription="@string/app_name"
            android:onClick="onClickSettings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/shop_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/ic_pokupki"
            android:contentDescription="@string/app_name"
            android:onClick="onClickShop"
            app:layout_constraintBottom_toBottomOf="@id/settings_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/user_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_profil"
            android:contentDescription="@string/app_name"
            android:onClick="onClickUser"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shop_button"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toEndOf="@+id/settings_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/app_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/app_name_1"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name_2"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/app_name_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toEndOf="@+id/app_name_1"
        app:layout_constraintTop_toTopOf="@+id/app_name_1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:hint="Введите название линз"
        android:text="___"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_lens_name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/panel"
        android:onClick="onClickLens"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView_lens_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/users_lens2"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

</androidx.constraintlayout.widget.ConstraintLayout>