<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout_main"
    android:background="@drawable/gradient_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

    <TextView
        android:id="@+id/_recept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/recept"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/panel"
        android:elevation="20dp"
        android:onClick="onClickSave"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="344dp"
        android:layout_height="288dp"
        android:background="@drawable/panel"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text=""
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.376"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.246" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Power"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/editText2"
            app:layout_constraintEnd_toStartOf="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.661"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editText2"
            app:layout_constraintVertical_bias="0.466" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text=""
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.376"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.502" />

        <EditText
            android:id="@+id/editText3_1"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text=""
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.789"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.502" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BC"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/editText3"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/editText3" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text=""
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.376"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.765" />

        <EditText
            android:id="@+id/editText4_1"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text=""
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.789"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.765" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DIA"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/editText4"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/editText4"
            app:layout_constraintVertical_bias="0.466" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="OS"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/editText2"
            app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="@+id/editText2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="OD"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/editText2_1"
            app:layout_constraintEnd_toEndOf="@+id/editText2_1"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="@+id/editText2_1" />

        <EditText
            android:id="@+id/editText2_1"
            android:layout_width="80dp"
            android:layout_height="49dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text=""
            android:maxLength="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.789"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.246" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="344dp"
        android:layout_height="94dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/panel"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="7dp"
            android:text="@string/recept_info"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.47"
            app:srcCompat="@drawable/ic_free_icon_font_info_3916699" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>